--- a/test-files/expected/app.wxml
+++ b/test-files/expected/app.wxml
@@ -5,6 +5,6 @@
 <image src="src/@libs/img/bg.png"/>
 <image src="@lib/img/bg.png"/>
 
-<audio poster="./utils/img/bg.png"></audio>
-<live-pusher url="./utils/pusher"></live-pusher>
-<a href="./utils/www"></a>
+<audio poster="../utils/img/bg.png"></audio>
+<live-pusher url="../utils/pusher"></live-pusher>
+<a href="../utils/www"></a>
