--- a/test-files/expected/app.css
+++ b/test-files/expected/app.css
@@ -1,5 +1,5 @@
 @import "libs";
-@import "./libs";
+@import "./libs/index";
 @import "./libs/var";
 @import "@libs-b/var";
 @import "@lib/var";
@@ -8,11 +8,12 @@
 
 .bg {
   background-image: url(libs);
-  background-image: url(./libs);
+  background-image: url(./libs/index);
   background-image: url(./libs/img/bg.png);
   background-image: url(@libs-b/var);
   background-image: url(src/@libs/var);
   background-image: url( ../utils/img/bg.png );
+  background-image: url( ../utils/lib/img/bg.png );
   background-image: url( '../utils/img/bg.png' );
   background-image: url( ' ../utils/img/bg.png ' );
 }
