--- a/test-files/expected/app.wxml
+++ b/test-files/expected/app.wxml
@@ -1,5 +1,5 @@
 <image src="libs"/>
-<image src="./libs"/>
+<image src="./libs/index"/>
 <image src="./libs/img/bg.png"/>
 <image src="@libs-b/img/bg.png"/>
 <image src="src/@libs/img/bg.png"/>
